hw12_1 sql storage init

--- a/hw12_13_14_15_calendar/.env
+++ b/hw12_13_14_15_calendar/.env
@@ -1,7 +1,1 @@
-DB_USER=user
-DB_PASSWORD=password
-DB_NAME=calendar
-DB_HOST=db
-DB_PORT=5432
-
-DB=postgres://user:password@db:5432/calendar?sslmode=disable
+DSN=postgres://user:password@db:5432/calendar?sslmode=disable
