hw12_2 grpc get event method complete

--- a/hw12_13_14_15_calendar/configs/config.dev.toml
+++ b/hw12_13_14_15_calendar/configs/config.dev.toml
@@ -2,10 +2,13 @@
 level = "DEBUG"
 
 [server]
-bind_address = ":8080"
-read_timeout = "5s"
-write_timeout = "5s"
-idle_timeout = "5s"
+http_bind_address = ":8080"
+http_read_timeout = "5s"
+http_write_timeout = "5s"
+http_idle_timeout = "5s"
+
+[grpc]
+grpc_listen_address = ":50051"
 
 [storage]
 type = "sql"
