--- a/hw12_13_14_15_calendar/.env
+++ b/hw12_13_14_15_calendar/.env
@@ -1,2 +1,3 @@
 ENV=dev
-DSN=postgres://user:password@db:5432/calendar?sslmode=disable
+DB_DSN=postgres://user:password@db:5432/calendar?sslmode=disable
+AMPQ_DSN=amqp://user:password@rabbit:5672/
