--- a/hw12_13_14_15_calendar/deployments/docker-compose.yaml
+++ b/hw12_13_14_15_calendar/deployments/docker-compose.yaml
@@ -14,6 +14,17 @@ services:
     networks:
       - calendar
 
+  scheduler:
+    image: calendar_scheduler:develop
+    env_file:
+      - ../.env
+    depends_on:
+      - db
+      - migrate
+      - rabbit
+    networks:
+      - calendar
+
   db:
     image: postgres:11.14
     environment:
@@ -37,6 +48,18 @@ services:
       - ../.env
     depends_on:
       - db
+    networks:
+      - calendar
+
+  rabbit:
+    image: rabbitmq:3.9-management
+    ports:
+      - "5672:5672"
+      - "15672:15672"
+    environment:
+      RABBITMQ_DEFAULT_USER: "user"
+      RABBITMQ_DEFAULT_PASS: "password"
+      RABBITMQ_DEFAULT_VHOST: "/"
     networks:
       - calendar
 
