--- a/hw12_13_14_15_calendar/.env
+++ b/hw12_13_14_15_calendar/.env
@@ -1,3 +1,3 @@
 ENV=dev
 DB_DSN=postgres://user:password@db:5432/calendar?sslmode=disable
-AMPQ_DSN=amqp://user:password@rabbit:5672/
+AMPQ_URL=amqp://user:password@rabbit:5672/
