--- a/hw12_13_14_15_calendar/deployments/docker-compose.yaml
+++ b/hw12_13_14_15_calendar/deployments/docker-compose.yaml
@@ -25,6 +25,15 @@ services:
     networks:
       - calendar
 
+  sender:
+    image: calendar_sender:develop
+    env_file:
+      - ../.env
+    depends_on:
+      - rabbit
+    networks:
+      - calendar
+
   db:
     image: postgres:11.14
     environment:
