hw15 integration tests complete

--- a/hw12_13_14_15_calendar/deployments/docker-compose.test.yaml
+++ b/hw12_13_14_15_calendar/deployments/docker-compose.test.yaml
@@ -5,5 +5,8 @@ services:
     build: ../tests
     env_file:
       - ../.env
+    depends_on:
+      - backend
+      - rabbit
     networks:
       - calendar
